chore(ws): 删除无生产者死协议面与坏死 useHubWebSocket
Closes #1362
Closes #1363
